--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gram</title>
+    <meta name="description" content="وبسایت رسمی grammoh ساخته شده توسط m0h4-0">
+    <meta name="keywords" content="grammoh">
+    <title>grammoh</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&family=Lobster&display=swap">
 </head>
 <body id="body">
     <header>
-        <h1 class="header-h1">Gram</h1>
+        <h1 class="header-h1">grammoh</h1>
         <i class="fa-regular fa-paper-plane" id="direct-btn" style="font-size: 18px;"></i>
     </header>
     <div class="stories">
@@ -255,6 +257,7 @@
             </div>
         </div>
     </div>
+    <p>grammoh یک پیامرسان است.</p>
     <div class="alert" id="mAlert">
         <div class="alert-div" id="mAlertDiv">
             <p class="alert-div-p" id="mAlertDivP"></p>
